--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@tanstack/react-query": "^5.51.23",
     "next": "14.2.5",
-    "next-query-glue": "0.0.1-rc.5",
+    "next-query-glue": "^0.0.2",
     "react": "^18",
     "react-dom": "^18",
     "thumbhash": "^0.1.1",
