--- a/package.json
+++ b/package.json
@@ -9,25 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@strapi/blocks-react-renderer": "^1.0.1",
-    "@tanstack/react-query": "^5.51.23",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@strapi/blocks-react-renderer": "^1.0.0-beta.0",
+    "@tanstack/react-query": "^5.32.0",
+    "@tanstack/react-query-devtools": "^5.51.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.451.0",
     "next": "14.2.5",
-    "next-query-glue": "0.0.3-rc.1",
+    "next-query-glue": "^0.0.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "thumbhash": "^0.1.1",
-    "usehooks-ts": "^3.1.0"
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7",
+    "thumbhash": "^0.1.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.14",
-    "@types/dom-view-transitions": "^1.0.5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/dom-view-transitions": "^1.0.4",
+    "@types/node": "^18.18.1",
+    "@types/qs": "^6.9.10",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.8",
+    "eslint": "9.6.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.3.6",
+    "typescript": "5.4.2"
   }
 }
