--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-optimistic-router-starter",
+  "name": "next-clean",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,15 +10,15 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@strapi/blocks-react-renderer": "^1.0.0-beta.0",
-    "@tanstack/react-query": "^5.32.0",
-    "@tanstack/react-query-devtools": "^5.51.15",
+    "@strapi/blocks-react-renderer": "^1.0.1",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/react-query": "^5.59.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.451.0",
-    "next": "14.2.5",
+    "lucide-react": "^0.452.0",
+    "next": "14.2.15",
     "next-query-glue": "^0.0.4",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -28,15 +28,13 @@
     "thumbhash": "^0.1.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13",
-    "@types/dom-view-transitions": "^1.0.4",
-    "@types/node": "^18.18.1",
-    "@types/qs": "^6.9.10",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.8",
-    "eslint": "9.6.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.3.6",
-    "typescript": "5.4.2"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
