--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.452.0",
     "next": "^15.0.0",
-    "next-query-glue": "^0.0.4",
+    "next-query-glue": "^0.0.5-rc.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
