--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "mocks": "node mockUtils/createMockArticles.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,18 +12,23 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.59.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.3.1",
+    "lorem-ipsum": "^2.0.8",
     "lucide-react": "^0.452.0",
     "next": "^15.0.0",
     "next-query-glue": "^0.0.6",
+    "next-rich-view-transitions": "^0.0.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "requestidlecallback-polyfill": "^1.0.2",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "thumbhash": "^0.1.1"
@@ -33,6 +39,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
+    "fs": "^0.0.1-security",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
