--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-query-glue": "^0.0.6",
     "next-rich-view-transitions": "^0.0.4",
     "next-themes": "^0.3.0",
+    "next-with-image-preload": "^0.0.1",
     "react": "^18",
     "react-dom": "^18",
     "requestidlecallback-polyfill": "^1.0.2",
